# wai-cors

./: .gitignore  .travis.yml  CHANGELOG.md  Confirmed-Constraints  LICENSE  README.md  constraints  wai-cors.cabal
.github/workflows/: haskell.yml
examples/: Scotty.hs  ServantWai.hs  Wai.hs
src/Network/Wai/Middleware/: Cors.hs
test/: PhantomJS.hs  Server.hs  UnitTests.hs  Websockets.hs  index.html  phantomjs.js  server.hs
