-- ------------------------------------------------------ --
-- Copyright © 2014 AlephCloud Systems, Inc.
-- ------------------------------------------------------ --

Name: wai-cors
Version: 0.2.2
Synopsis: CORS for WAI

Description:
    This package provides an implemenation of
    Cross-Origin resource sharing (CORS) for
    <http://hackage.haskell.org/package/wai Wai>
    that aims to be compliant with <http://www.w3.org/TR/cors>.

Homepage: https://github.com/alephcloud/wai-cors
Bug-reports: https://github.com/alephcloud/wai-cors/issues
License: MIT
License-file: LICENSE
Author: Lars Kuhtz <lars@alephcloud.com>
Maintainer: Lars Kuhtz <lars@alephcloud.com>
Copyright: Copyright (c) 2014 AlephCloud Systems, Inc.
Category: Web
Build-type: Simple
Cabal-version: >= 1.14.0

data-files:
    README.md
    CHANGELOG.md
    constraints
    test/index.html
    test/server.hs

source-repository head
    type: git
    location: https://github.com/alephcloud/wai-cors

source-repository this
    type: git
    location: https://github.com/alephcloud/wai-cors
    tag: 0.2.2

flag transformers-3
    description: use transformers<0.3 (this is set automatically)
    default: False
    manual: False

flag wai-1
    description: use version wai<2 (this is set automatically)
    default: False
    manual: False

Library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Network.Wai.Middleware.Cors

    build-depends:
        attoparsec >= 0.10.4.0,
        base == 4.*,
        base-unicode-symbols >= 0.2.2.3,
        bytestring >= 0.10.0.2,
        case-insensitive >= 1.0.0.1,
        charset >= 0.3.7,
        http-types >= 0.8.0,
        parsers >= 0.11

    if flag (wai-1)
        build-depends:
            wai < 2.0,
            resourcet >= 0.4
    else
        build-depends:
            wai >= 2.0

    if flag(transformers-3)
        build-depends:
            mtl >= 2.1,
            transformers >= 0.3 && < 0.4,
            transformers-compat >= 0.3
    else
        build-depends:
            mtl >= 2.2,
            transformers >= 0.4

